--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="nav-menu-container" autosize>
     <button mat-icon-button aria-label="Меню 1" matTooltip="Меню" (click)="drawer.toggle()">
-        <mat-icon>more_vert</mat-icon>
+        <mat-icon>chevron_right</mat-icon>
     </button>
     <mat-drawer #drawer class="nav-menu-sidenav" mode="side">
         <mat-list class="nav-menu-content">
