--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,4 +1,4 @@
-<div class="button-row">
+<div class="top-row">
     <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Меню 1">
         <mat-icon>menu</mat-icon>
     </button>
