--- a/src/app/nav-menu/nav-menu.component.css
+++ b/src/app/nav-menu/nav-menu.component.css
@@ -1,20 +1,15 @@
 .nav-menu-container {
-    width: 100%;
-    height: 800pt;
+    width: 100% - 40pt;
+    height: 90%;
   }
   
   .nav-menu-sidenav-content {
     display: flex;
     height: 100%;
-    align-items: center;
-    justify-content: center;
   }
   
   .nav-menu-sidenav {
-    padding: 20px;
+    padding: 10pt;
   }
 
-  .mat-mdc-list-item-icon {
-    color: rgba(0, 0, 0, 0.54);
-  }
   
