--- a/src/app/calc-netid/calc-netid.component.html
+++ b/src/app/calc-netid/calc-netid.component.html
@@ -1,1 +1,48 @@
-<p>calc-netid works!</p>
+<form #netidForm [formGroup]="formGroup">
+    Показать идентификатор сети по адресу устройства
+    <div fxLayout="row" fxLayoutAlign="stretch" >
+        <div>
+            <mat-form-field class="addr">
+                <mat-label>Адрес устройства</mat-label>
+                <input matInput type="text" placeholder="Адрес" formControlName="addr" (change)="onAddrChanged($event)">
+            </mat-form-field>
+        </div>
+        <div>
+            <button mat-button color="primary" mat-button type="submit">Показать</button>  
+        </div>
+        <p></p>
+        <div>
+            <mat-form-field class="addr">
+                <mat-label>Идентификатор сети</mat-label>
+                <input matInput readonly type="text" placeholder="Идентификатор сети" [value]="value.netid">
+            </mat-form-field>
+        </div>
+
+        <div>
+            <mat-form-field class="addr">
+                <mat-label>Тип сети</mat-label>
+                <input matInput readonly type="text" placeholder="Тип сети" [value]="value.type">
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field class="addr">
+                <mat-label>nwkId</mat-label>
+                <input matInput readonly type="text" placeholder="nwkId" [value]="value.nwkId">
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field class="addr">
+                <mat-label>Min адрес сети</mat-label>
+                <input matInput readonly type="text" placeholder="Min адрес сети" [value]="value.addrMin">
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field class="addr">
+                <mat-label>Max адрес сети</mat-label>
+                <input matInput readonly type="text" placeholder="Max адрес сети" [value]="value.addrMax">
+            </mat-form-field>
+        </div>
+    
+
+    </div>
+</form>
