--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -2,15 +2,11 @@
     <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Меню 1">
         <mat-icon>menu</mat-icon>
     </button>
-    LoRaWAN oнлайн калькулятор
+    LoRaWAN oнлайн калькулятор v.{{version}}
     <mat-menu #menu="matMenu">
         <button mat-menu-item>
             <mat-icon>dialpad</mat-icon>
             <span>Redial</span>
-        </button>
-        <button mat-menu-item disabled>
-            <mat-icon>voicemail</mat-icon>
-            <span>Check voice mail</span>
         </button>
         <button mat-menu-item>
             <mat-icon>notifications_off</mat-icon>
