--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -3,6 +3,9 @@
         <mat-icon>menu</mat-icon>
     </button>
     LoRaWAN oнлайн калькулятор v.{{version}}
+    @if (!env.isOnline) {
+        <mat-icon>wifi_off</mat-icon>
+    }
     <mat-menu #menu="matMenu">
         <button mat-menu-item>
             <mat-icon>dialpad</mat-icon>
@@ -12,5 +15,8 @@
             <mat-icon>notifications_off</mat-icon>
             <span>Disable alerts</span>
         </button>
+        <app-dark-mode-switch></app-dark-mode-switch>
     </mat-menu>
+
+    
 </div>
