--- a/src/app/print-gw/print-gw.component.html
+++ b/src/app/print-gw/print-gw.component.html
@@ -1,1 +1,210 @@
-<p>print-gw works!</p>
+<span class="form-header">пакет шлюза</span>
+<form>
+    <div fxLayout="row" fxLayoutAlign="stretch" >
+        <div>
+            <mat-form-field class="packet">
+                <mat-label>Пакет</mat-label>
+                <input matInput type="text" placeholder="hex" [formControl]="packet" (change)="onChanged($event)">
+            </mat-form-field>
+                @if(packet.invalid) {
+                    <mat-error>Последовательность шестнадцатиричных чисел</mat-error>
+                }
+        </div>
+        <p></p>
+        <div>
+            <button mat-button color="primary" mat-button type="submit">Показать</button>  
+        </div>
+        <p></p>
+        @if(value.code) {
+            <div>
+                Ошибка {{value.code}}: {{value.error}}
+            </div>
+        }
+        @if(value.rfm.mhdr.mtype) {
+        <div>
+            <table>
+                <tr>
+                    <td>
+                        Метаданные
+                    </td>
+                    <td>
+                        Значение
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Шлюз
+                    </td>
+                    <td>
+                        {{ value.metadata.gatewayId }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Время
+                    </td>
+                    <td>
+                        {{ value.metadata.time }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        tmst
+                    </td>
+                    <td>
+                        {{ value.metadata.tmst }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        chan
+                    </td>
+                    <td>
+                        {{ value.metadata.chan }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        rfch
+                    </td>
+                    <td>
+                        {{ value.metadata.rfch }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Частота, МГц
+                    </td>
+                    <td>
+                        {{ value.metadata.freq / 1000000 }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        stat
+                    </td>
+                    <td>
+                        {{ value.metadata.stat }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Модуляция
+                    </td>
+                    <td>
+                        {{ value.metadata.modu }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Data rate
+                    </td>
+                    <td>
+                        {{ value.metadata.datr }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Coding rate
+                    </td>
+                    <td>
+                        {{ value.metadata.codr }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        BPS
+                    </td>
+                    <td>
+                        {{ value.metadata.bps }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        RSSI
+                    </td>
+                    <td>
+                        {{ value.metadata.rssi }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        LSNR
+                    </td>
+                    <td>
+                        {{ value.metadata.lsnr }}
+                    </td>
+                </tr>
+           </table>
+           <table>
+            <tr>
+                <td colspan="2">
+                    <b>{{ env.mtype2string(value.rfm.mhdr.mtype) }}</b> ( {{value.rfm.mhdr.mtype}} )
+                </td>
+            </tr>
+            @if (value.rfm.mhdr.mtype == 2) {
+            <tr>
+                <td>
+                    Адрес
+                </td>
+                <td>
+                    {{value.rfm.uplink.addr}}
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    foptslen
+                </td>
+                <td>
+                    {{value.rfm.uplink.foptslen}}
+                </td>
+            </tr>
+            @if (value.rfm.uplink.classb) {
+            <tr>
+                <td>
+                    Класс B
+                </td>
+                <td>
+                </td>
+            </tr>
+            }
+            @if (value.rfm.uplink.ack) {
+                <tr>
+                    <td>
+                        ACK
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            }
+            @if (value.rfm.uplink.adr) {
+                <tr>
+                    <td>
+                        ADR
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            }
+            <tr>
+                <td>
+                    addrackreq
+                </td>
+                <td>
+                    {{value.rfm.uplink.addrackreq}}
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    optsNpayload
+                </td>
+                <td>
+                    {{value.rfm.uplink.optsNpayload}}
+                </td>
+            </tr>
+        }
+           </table>
+        </div>
+    }
+    </div>
+</form>
