Add dark mode switch

--- a/src/app/all-classes/all-classes.component.html
+++ b/src/app/all-classes/all-classes.component.html
@@ -57,7 +57,7 @@
                 {{ v.nwkMaxAddrMin}}
             </td>
             <td>
-                {{ v.nwkMaxAddrMin}}
+                {{ v.nwkMaxAddrMax}}
             </td>
         </tr>
     }
