--- a/src/dark-mode-switch/dark-mode-switch.component.html
+++ b/src/dark-mode-switch/dark-mode-switch.component.html
@@ -1,8 +1,5 @@
 <section>
     <div class="light-dark-side-placeholder">
-      <mat-slide-toggle #lightDarkToggle class="toggle-light-dark-theme"
-        (click)="doToggleLightDark(lightDarkToggle)">
-        <mat-icon>{{lightDarkToggleIcon}}</mat-icon>
-      </mat-slide-toggle>
+      <mat-slide-toggle #toggle class="toggle-light-dark-theme" [checked]="checked" (click)="onToggle(toggle)"> Тёмная тема</mat-slide-toggle>
     </div>
 </section>
