--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,12 +1,13 @@
 <div class="top-row">
-    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Меню 1">
+    <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Меню" aria-label="Меню">
         <mat-icon>menu</mat-icon>
     </button>
-    LoRaWAN oнлайн калькулятор v.{{version}}
+    <span class="form-header" [matTooltip]="'Версия ' + version">LoRaWAN oнлайн калькулятор</span>
     @if (!env.isOnline) {
         <mat-icon>wifi_off</mat-icon>
     }
     <mat-menu #menu="matMenu">
-        <app-dark-mode-switch [checked]="env.settings.darkMode" (darkThemeOn)="env.darkThemeOn($event)"></app-dark-mode-switch>
+        <button mat-menu-item (click)="nav('/')">Первая страница</button>
+        <app-dark-mode-switch matTooltip="Светлая или темная тема" [checked]="env.settings.darkMode" (darkThemeOn)="env.darkThemeOn($event)"></app-dark-mode-switch>
     </mat-menu>
 </div>
