--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ $dark-theme: mat.define-dark-theme(
   )
 );
 
-    // Define a light theme
+// Define a light theme
 $light-theme: mat.define-light-theme(
   (
     color: (
@@ -28,10 +28,14 @@ $light-theme: mat.define-light-theme(
   @include mat.core-theme($dark-theme);
   @include mat.button-theme($dark-theme);
   @include mat.all-component-themes($dark-theme);
-  @media (prefers-color-scheme: light) {
-    @include mat.core-color($light-theme);
-    @include mat.button-color($light-theme);
-  }
+}
+
+.light {
+  /*
+  @include mat.core-theme($light-theme);
+  @include mat.button-theme($light-theme);
+  @include mat.all-component-themes($light-theme);
+  */
 }
 
 html, body { height: 100%; }
